Fix version number in action

--- a/.github/workflows/build_and_deploy.yml
+++ b/.github/workflows/build_and_deploy.yml
@@ -39,7 +39,7 @@ jobs:
 
       # Deploy to Github Pages using github-pages-deploy-action
       - name: Deploy to Github Pages
-        uses: JamesIves/github-pages-deploy-action@4.4.1
+        uses: JamesIves/github-pages-deploy-action@v4.4.1
         with:
           branch: gh-pages
           folder: dist/spa # adjust this based on your Quasar configuration
